mjs/tests/invalid_syntax/for_of.js
let a = [1, 2];

for (let x of a) {
  print(x);
}
